[project]
name = "SubhoBoy's Bot"
version = "0.1.0"
description = "A fun bot for use in my personal servers. Feel free to host it yourself, however. Issues/PRs welcome!"
authors = [
    {name = "Subhodeep Chakraborty", email = "subho07t@gmail.com"},
]
dependencies = [
    "discord.py-stubs>=1.7.3",
    "discord>=1.7.3",
    "inputimeout>=1.0.4",
]
requires-python = ">=3.9"
license = {text = "Unlicense"}

[project.urls]
Homepage = ""

[tool.poetry]
name = "SubhoBoy's Bot"
version = "0.1.0"
description = ""
authors = ["Subhodeep Chakraborty <subho07t@gmail.com>"]
[tool.poetry.dependencies]
python = "~=3.9"
discord = "^1.7.3"
inputimeout = "^1.0.4"
[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.1.0",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
