[project]
name = "Bot"
version = "0.1.2"
description = "SubhoBoy's Bot:- A fun bot for use in my personal servers. Feel free to host it yourself, however. Issues/PRs welcome!"
authors = [
    {name = "Subhodeep Chakraborty", email = "subho07t@gmail.com"},
]
dependencies = [
    "discord.py-stubs>=1.7.3",
    "discord>=1.7.3",
    "inputimeout>=1.0.4",
    "flask[async]>=2.0.3",
]
requires-python = ">=3.8"
license = {text = "Unlicense"}

[project.urls]
Homepage = ""

[tool.poetry]
name = "SubhoBoy's Bot"
version = "0.1.0"
description = ""
authors = ["Subhodeep Chakraborty <subho07t@gmail.com>"]
[tool.poetry.dependencies]
python = ">=3.8"
discord = "^1.7.3"
inputimeout = "^1.0.4"
Flask = {extras = ["async"], version = "^2.0.3"}
[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.1.0",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
